# mujoco_AUVC

./: .gitignore  README.md
include/mujoco/: mjvisualize.h  mujoco.h
model/flying-dog/: coxa2.STL  femur2.STL  flying-dog.xml  propeller_94.STL  propeller_ADAPTER.STL  propeller_MT2208.STL  propeller_spinner.STL  tibia2.STL
model/hardware/drone/: Kimi 30A ESCIRAN.SLDPRT  Kimi Chasis.SLDPRT  Kimi DJI arm.SLDPRT  Kimi MT2208-18 spinner.SLDPRT  Kimi MT2208-18.SLDPRT  Kimi PROP ADAPTER MT 2208-18.SLDPRT  Kimi Prop Adapter Nut MT2208-18.SLDPRT  Kimi Prop Adapter Washer MT2208-18.SLDPRT  Kimi Top Plate.SLDPRT  Kimi fc Naza - PSU.SLDPRT  Kimi fcNaza - GPS.SLDPRT  Kimi fcNaza - MC.SLDPRT  Kimi propeler 9x4.SLDPRT  Kimi stand.SLDPRT  Vijak.SLDPRT  box2.SLDPRT
model/hardware/parts/: Coxa.SLDASM  Rubber Foot.SLDPRT  body.SLDPRT  femur.SLDPRT  tibia.SLDPRT
model/hardware/raspberry/: raspberry_pi_B+_(15_pin_FFC_Connector).SLDASM  raspberry_pi_B+_(168_FBGA_12x12).SLDPRT  raspberry_pi_B+_(CI_Board).SLDPRT  raspberry_pi_B+_(HDMI_socket).SLDASM  (+20 more)
model/sub/: bluerov2.mtl  sub.xml  t200_ccw_prop.mtl
simulate/: CMakeLists.txt  main.cc  python_udp_recv.py  simulate.cc  simulate.h
simulate/AUVC/: CMakeLists.txt  README.md  controller.cc  controller.h  roverPhysics.cc  roverPhysics.h
simulate/AUVC/Tags/: Serial.cc  Serial.h  tags.cc  tags.h
simulate/AUVC/Tags/AR_SRC/: TagDetection.cc  TagDetection.h  TagDetector.cc
simulate/AUVC/apriltags/: CMakeLists.txt
simulate/AUVC/apriltags/example/: CMakeLists.txt  Serial.cpp  apriltags_demo.cpp
simulate/AUVC/apriltags/example/arduino_tags/: arduino_tags.ino
simulate/AUVC/labs/: day1.md
simulate/AUVC/labs/src/: array.c
simulate/AUVC/opencv_tests/: test1.py  testfinal.py  video.py
simulate/AUVC/pio_auvc/: aprilt.py  bitmap.txt  lane_detect.py  servo_serial.py  talk_ard.cpp  teensy_run.sh
simulate/AUVC/pio_auvc/control_loop/: lane_detection.py
simulate/AUVC/pio_auvc/python/: aprilt.py  gstream_test.py  lane_detect_test.py  pup_aprilt.py  transmitter.py
simulate/AUVC/pio_auvc/src/: .read_write.ino.swp  list_i2c_devices.ino  main.h  main_Control.cc  read_write.ino.bak  servo_ctrl.ino.bak  servo_ctrl2.ino.bak  simple_with_calibration.ino.bak  software_reboot.ino.bak
simulate/AUVC/wiringpi_test/: blink.c  build.sh  clean.sh  motors.c  servo.c  softPwm.c
simulate/rx_tx/: CMakeLists.txt  receiver.cpp  sender.cpp  transmitter.py
src/engine/: CMakeLists.txt
src/render/: render_gl2.c  render_gl2.h  render_gl3.c  render_gl3.h
(+11 files in other folders)
